# betterspotlight

./: .env.example  .gitignore  CMakeLists.txt  Package.swift  flake.nix
Tests/: CMakeLists.txt  coverage_exclusions.txt  coverage_thresholds.json
Tests/Fixtures/sample_documents/: .hidden_file  ALLCAPS.TXT  CHANGELOG.md  CONTRIBUTING.md  LICENSE.txt  MiXeDcAsE.Txt  README.md  binary_masquerade.txt  file with spaces.txt  file-with-dashes.txt  file_with_underscores.txt  latin1.txt  sample.cmake  sample.cpp  sample.css  sample.csv  sample.diff  sample.dockerfile  sample.editorconfig  sample.env  sample.gitignore  sample.go  sample.graphql  sample.html  sample.ini  sample.java  sample.js  sample.json  sample.kt  sample.lua  sample.makefile  sample.md  sample.php  sample.prettierrc  sample.proto  sample.py  sample.r  sample.rb  sample.rs  sample.scala  (+12 more)
Tests/Fixtures/standard_home_v1/: .gitconfig  .zshrc
Tests/Integration/: IndexingIntegrationTests.swift  test_app_lifecycle_states.cpp  test_boost_verification.cpp  test_context_boost.cpp  test_crash_isolation.cpp  test_embedding_fallback.cpp  test_embedding_recovery.cpp  test_extractor_service_ipc.cpp  test_full_pipeline.cpp  test_health_consistency_v2.cpp  test_incremental_update.cpp  test_index_backpressure.cpp  test_index_persistence.cpp  test_indexer_service_ipc.cpp  test_inference_service_ipc.cpp  test_orphan_reconciliation.cpp  test_query_service_core_improvements.cpp  test_query_service_ipc_extensions.cpp  test_query_service_m2_ipc.cpp  test_query_service_relevance_fixture.cpp  test_query_service_semantic_offload.cpp  test_semantic_search.cpp  test_single_instance_handoff.cpp  test_ui_sim_query_suite.cpp
Tests/Legacy/swift/: IndexingIntegrationTests.swift  README.md  TextExtractorTests.swift
Tests/Support/: ipc_test_utils.cpp  ipc_test_utils.h  service_process_harness.cpp  service_process_harness.h
Tests/Unit/: PathRulesTests.swift  ScoringTests.swift  TextExtractorTests.swift  test_bsignore_parser.cpp  test_chunker.cpp  test_control_plane_actor.cpp  test_corrupt_files.cpp  test_cross_encoder_reranker.cpp  test_docs_memo_location.cpp  test_doctype_classifier.cpp  test_dual_index_calibration.cpp  test_embedding.cpp  test_embedding_circuit_breaker.cpp  test_entity_extractor.cpp  test_extraction_extension_fallback.cpp  test_extraction_office_pdf.cpp  test_extraction_timeout.cpp  test_feedback_aggregator.cpp  test_health_aggregator_actor.cpp  test_indexer.cpp  test_inference_supervisor_actor.cpp  test_interaction_tracker.cpp  test_ipc_messages.cpp  test_ipc_reliability.cpp  test_learning_engine.cpp  test_match_classifier.cpp  test_mdls_text_extractor.cpp  test_migration.cpp  test_model_registry.cpp  test_model_session.cpp  test_ocr_extractor.cpp  test_online_ranker.cpp  test_path_preferences.cpp  test_path_rules.cpp  test_path_state_actor.cpp  test_pdf_extractor.cpp  test_personalized_ltr.cpp  test_pipeline.cpp  test_pipeline_scheduler_actor.cpp  test_qa_extractive_model.cpp  (+28 more)
Tests/Utils/: model_fixture_paths.cpp  model_fixture_paths.h
Tests/benchmarks/: benchmark_indexing.sh  benchmark_memory.sh  benchmark_search.sh  learning_soak_48h.sh  memory_drift_24h.sh  stress_1h.sh  stress_48h.sh  stress_8h.sh  stress_8h_m2.sh
Tests/relevance/: .gitignore  baselines.json  model_shortlist_2026-02-11.json  run_relevance_test.sh  test_corpus.json  ui_sim_query_suite.json
src/app/: CMakeLists.txt  Info.plist  hotkey_manager.cpp  hotkey_manager.h  main.cpp  onboarding_controller.cpp  onboarding_controller.h  platform_integration.cpp  platform_integration.h  platform_integration_mac.mm  runtime_environment.cpp  runtime_environment.h  search_controller.cpp  search_controller.h  service_manager.cpp  service_manager.h  settings_controller.cpp  settings_controller.h  status_bar_bridge.h  system_interaction_collector.h  system_interaction_collector_mac.mm  system_interaction_collector_stub.cpp  update_manager.h  update_manager.mm
src/app/assets/: BetterSpotlight.icns  icons.qrc
src/app/control_plane/: control_plane_actor.cpp  control_plane_actor.h  control_plane_types.h  health_aggregator_actor.cpp  health_aggregator_actor.h  health_snapshot_v2.cpp  health_snapshot_v2.h
src/app/qml/: Main.qml  ResultItem.qml  SearchPanel.qml  SettingsPanel.qml  StatusBar.qml
src/core/: CMakeLists.txt
src/core/embedding/: CMakeLists.txt  embedding_manager.cpp  embedding_manager.h  embedding_pipeline.cpp  embedding_pipeline.h  quantizer.cpp  quantizer.h  tokenizer.cpp  tokenizer.h
src/core/extraction/: CMakeLists.txt  extraction_manager.cpp  extraction_manager.h  extractor.h  mdls_text_extractor.cpp  mdls_text_extractor.h  ocr_extractor.cpp  ocr_extractor.h  pdf_extractor.cpp  pdf_extractor.h  text_cleaner.cpp  text_cleaner.h  text_extractor.cpp  text_extractor.h
src/core/feedback/: CMakeLists.txt  feedback_aggregator.cpp  feedback_aggregator.h  interaction_tracker.cpp  interaction_tracker.h  path_preferences.cpp  path_preferences.h  type_affinity.cpp  type_affinity.h
src/core/fs/: CMakeLists.txt  bsignore_parser.cpp  bsignore_parser.h  file_monitor.h  file_monitor_macos.cpp  file_monitor_macos.h  file_scanner.cpp  file_scanner.h  path_rules.cpp  path_rules.h
src/core/index/: migration.cpp  migration.h  schema.h  sqlite_store.cpp  sqlite_store.h  typo_lexicon.cpp  typo_lexicon.h
src/core/indexing/: CMakeLists.txt  chunker.cpp  chunker.h  indexer.cpp  indexer.h  path_state_actor.cpp  path_state_actor.h  pipeline.cpp  pipeline.h  pipeline_scheduler_actor.cpp  pipeline_scheduler_actor.h  pipeline_telemetry_actor.cpp  pipeline_telemetry_actor.h  work_queue.cpp  work_queue.h
src/core/ipc/: CMakeLists.txt  message.cpp  message.h  service_base.cpp  service_base.h  socket_client.cpp  socket_client.h  socket_server.cpp  socket_server.h  supervisor.cpp  supervisor.h
src/core/learning/: CMakeLists.txt  behavior_types.h  coreml_ranker.h  coreml_ranker.mm  coreml_ranker_stub.cpp  learning_engine.cpp  learning_engine.h  online_ranker.cpp  online_ranker.h
src/core/models/: CMakeLists.txt  model_manifest.cpp  model_manifest.h  model_registry.cpp  (+5 more)
(+266 files in other folders)
